# back/docs/swagger.json
@@ -256,6 +256,42 @@
         },
         "/post/get-by-id": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Returns existing posts",
+                "parameters": [
+                    {
+                        "description": "wrapped id",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/post.getPostByIDIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/post.getPostByIDOut200"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/post/like-by-id": {
+            "post": {
                 "security": [
                     {
                         "Bearer": []
@@ -284,6 +320,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/post.likePostByIDOut200"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/post/mine": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Returns posts created by the user",
+                "parameters": [
+                    {
+                        "description": "wrapped page",
+                        "name": "page",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/post.getMinePostsIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/post.getMinePostsOut200"
                         }
                     },
                     "500": {
@@ -372,6 +444,39 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/postgres.User"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/lookup": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Get the list of hashtags similar to one that user tries to enter.",
+                "parameters": [
+                    {
+                        "description": "user_id beginning",
+                        "name": "user_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.lookupIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.lookupOut200"
                         }
                     },
                     "500": {
@@ -529,6 +634,28 @@
                 }
             }
         },
+        "post.getMinePostsIn": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                }
+            }
+        },
+        "post.getMinePostsOut200": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "posts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/postgres.PostAssembled"
+                    }
+                }
+            }
+        },
         "post.getPostByIDIn": {
             "type": "object",
             "properties": {
@@ -652,6 +779,23 @@
                 }
             }
         },
+        "postgres.PostAssembled": {
+            "type": "object",
+            "properties": {
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/postgres.PostComment"
+                    }
+                },
+                "is_liked": {
+                    "type": "boolean"
+                },
+                "post": {
+                    "$ref": "#/definitions/postgres.Post"
+                }
+            }
+        },
         "postgres.PostBrief": {
             "type": "object",
             "properties": {
@@ -666,6 +810,9 @@
                 },
                 "mine": {
                     "type": "boolean"
+                },
+                "user_image": {
+                    "type": "string"
                 }
             }
         },
@@ -718,6 +865,25 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "user.lookupIn": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.lookupOut200": {
+            "type": "object",
+            "properties": {
+                "user_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
